<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#FEFEFE"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/movieImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop"
            card_view:srcCompat="@drawable/sw"
           />

        <TextView
            android:id="@+id/title"
            android:textColor="@color/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_width="200dp"
            android:layout_toRightOf="@+id/movieImageView"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/title"

            />

        <TextView
            android:id="@+id/genre"
            android:layout_alignParentBottom="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:text="@string/genre"
            android:textSize="16sp"/>




        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            card_view:srcCompat="@drawable/sw"
            android:id="@+id/movieImageView2"
            android:scaleType="centerCrop"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:srcCompat="@drawable/eye"
            android:id="@+id/eyeImageView"
            android:visibility="invisible"
            android:layout_below="@+id/movieImageView2"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/movieImageView2" />
        <TextView
            android:id="@+id/year"
            android:textColor="@color/year"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/eyeImageView"
            android:textSize="16sp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>