<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.stala.grzegorz.lab2.Activities.MovieInfoActivity">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/panda"
            android:id="@+id/movieImageInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="211dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="211dp"
            tools:layout_editor_absoluteX="0dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movieRatingBar"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"

            />

        <TextView
            android:text="@string/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gradeTextView"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRatingBar"
            app:layout_constraintVertical_bias="0.46" />

        <TextView
            android:text="@string/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/movieImageInfo"
            app:layout_constraintLeft_toLeftOf="@+id/movieImageInfo"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>